# pico_freertos_shell

./: CMakeLists.txt  README.md  pico_freertos_shell_import.cmake
cmake_preinit/: CMakeLists.txt
cmake_preinit/pico_stdio/: CMakeLists.txt  LICENSE  stdio.c
include/pico_freertos_shell/: commands.h  init.h
src/: pfs_autocompletion.c  pfs_autocompletion.h  pfs_cmd_history.c  pfs_cmd_history.h  pfs_cmd_queue.c  pfs_cmd_queue.h  pfs_commands.c  pfs_core.c  pfs_escape_sequences.c  pfs_escape_sequences.h  pfs_handle_shell_input.c  pfs_handle_shell_input.h  pfs_io.c  pfs_io.h  pfs_utils.h  pfs_vt100.c  pfs_vt100.h
tests/: CMakeLists.txt  test_mocks.c  test_utils.h
tests/suites/: commands_add_unit_test.c  commands_execute_unit_test.c  commands_tab_autocompletion_unit_test.c
